src/pydjinni/generator/objc/it/swift/error/expected/include/objc/SFTFooError.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
FOUNDATION_EXPORT NSErrorDomain const SFTFooErrorDomain;
/// error comment
typedef NS_ERROR_ENUM(SFTFooErrorDomain, SFTFooError) {
    /// error code comment
    SFTFooErrorSomethingWrong,
    SFTFooErrorSomethingElseWrong,
    /// an error with parameters
    /// 
    /// - Parameter parameter: is an important additional information
    SFTFooErrorSomethingWithParameters
}
NS_SWIFT_NAME(FooError);

FOUNDATION_EXPORT NSErrorUserInfoKey const SFTFooErrorSomethingWithParametersParameter NS_SWIFT_NAME(FooErrorSomethingWithParametersParameter);
